update all configuration pages to throw error if we don't have access

--- a/admin/views/configuration/header.html
+++ b/admin/views/configuration/header.html
@@ -1,9 +1,11 @@
 <nav class="nav-page">
 	<div class="inner">
 		<ul>
-			<li><a href="{{ADMWEBROOT}}configuration/module">Modules</a></li>
-			<li><a href="{{ADMWEBROOT}}configuration/infos-generales">Infos générales</a></li>
-			<li><a href="{{ADMWEBROOT}}configuration/base-de-donnees">Base de données</a></li>
+			{% if super_admin == 1 %}
+				<li><a href="{{ADMWEBROOT}}configuration/module">Modules</a></li>
+				<li><a href="{{ADMWEBROOT}}configuration/infos-generales">Infos générales</a></li>
+				<li><a href="{{ADMWEBROOT}}configuration/base-de-donnees">Base de données</a></li>
+			{% endif %}
 			<li><a href="{{ADMWEBROOT}}configuration/mon-compte">Mon compte</a></li>
 		</ul>
 	</div>
