--- a/admin/views/configuration/module.html
+++ b/admin/views/configuration/module.html
@@ -8,7 +8,7 @@
 {% include("configuration/js/configuration.html") %}
 {% include("configuration/header.html") %}
 
-{% if super_admin == 1 %}
+{% if app.super_admin == 1 %}
 	<div class="inner">
 		{#<?php require_once(LIBSROOT."barre_chargement/index.php"); }}#}
 		<div class="contenu modifier-contenu">
