--- a/admin/views/gestion-contenus/modifier-contenu.html
+++ b/admin/views/gestion-contenus/modifier-contenu.html
@@ -15,7 +15,7 @@
 		<input type="hidden" name="id_page" value="{{ id }}">
 		
 		{% if id != 1 and app.droit_acces_page.supprimer == 1 or app.super_admin == 1 %}
-			<button id="supprimer-page-contenu" type="button" class="submit-contenu supprimer-page supprimer open-popup" popup="supprimer-page" href="{{ADMWEBROOT}}controller/core/admin/contenus/gestion/supprimer_page?id={{id_page_courante}}"><i class="fa fa-times"></i>Supprimer cette page</button>
+			<button id="supprimer-page-contenu" type="button" class="submit-contenu supprimer-page supprimer open-popup" popup="supprimer-page" href="{{ADMWEBROOT}}controller/core/admin/contenus/gestion/supprimer_page?id={{app.contenus.id_page}}"><i class="fa fa-times"></i>Supprimer cette page</button>
 		{% endif %}
 	
 		<div class="inner">
@@ -25,19 +25,19 @@
 					<div class="colonne">
 						<div class="bloc">
 							<label class="label" data-error="Le titre pour le navigateur doit être entre 10 et 70 caractères" for="balise_title">Titre pour le navigateur</label>
-							<input type="text" name="balise_title" type-val="string" min="10" max="70" value="{{balise_title}}" required=""/>
+							<input type="text" name="balise_title" type-val="string" min="10" max="70" value="{{app.contenus.balise_title}}" required=""/>
 						</div>
 					</div>
 					<div class="colonne">
 						<div class="bloc">
 							<label class="label" for="url" data-error="L'url doit être comprise entre 3 et 92 caractères">Url affichée dans le navigateur</label>
-							<input type="text" name="url" type-val="string" min="3" max="92" value="{{url}}" {% if id_page == 1 %}disabled{% endif %}/>
+							<input type="text" name="url" type-val="string" min="3" max="92" value="{{url}}" {% if app.contenus.id_page == 1 %}disabled{% endif %}/>
 						</div>
 					</div>
 					{% if redirect_page == false %}
 						<div class="bloc no-input">
 							<label class="label label-textarea" for="meta_description" data-error="La description doit être comprise entre 10 et 158 caractères">Description de votre site pour le navigateur (maximum 256 caractères)</label>
-							<textarea name="meta_description" type-val="string" min="10" max="158" required="">{{meta_description}}</textarea>
+							<textarea name="meta_description" type-val="string" min="10" max="158" required="">{{app.contenus.meta_description}}</textarea>
 						</div>
 					{% endif%}
 				</section>
@@ -49,20 +49,20 @@
 					<div class="colonne">
 						<div class="bloc">
 							<label class="label" for="titre_page" data-error="Le titre de la page doit être entre 5 et 50 caractères">Titre de la page (utilisée pour le menu)</label>
-							<input type="text" name="titre_page" type-val="string" min="5" max="50" value="{{titre_courant}}" required=""/>
+							<input type="text" name="titre_page" type-val="string" min="5" max="50" value="{{app.contenus.titre}}" required=""/>
 						</div>
 					</div>
 					<div class="colonne">
 						<div class="bloc parent">
 							<label class="label" for="parent_texte">Parent de la page</label>
-							<input type="hidden" name="parent" value="{{parent_courant}}"/>
-							<input type="text" name="parent_texte" value="{{texte_parent_courant}}"/>
+							<input type="hidden" name="parent" value="{{app.contenus.parent_courant}}"/>
+							<input type="text" name="parent_texte" value="{{app.contenus.texte_parent_courant}}"/>
 						</div>
 					</div>
 				</section>
 			{% endif %}
 	
-			{% if app.super_admin == 1 or app.droit_acces_page.contenu == 1 and rediret_page != 1 %}
+			{% if app.super_admin == 1 or app.droit_acces_page.contenu == 1 and app.contenus.rediret_page != 1 %}
 				<section class="contenu modifier-contenu">
 					<h2>Partie concernant l'affichage dans le navigateur</h2>
 	
@@ -70,7 +70,7 @@
 						sur du texte, et si il est modifiable, vous pourrez l'éditer.
 					</p>
 	
-					<a class="submit-contenu submit-standard inline no-shadow ml0" href="{{ADMWEBROOT}}gestion-contenus/inline.php?id={{id_page_courante}}">Modifier les contenus</a>
+					<a class="submit-contenu submit-standard inline no-shadow ml0" href="{{ADMWEBROOT}}gestion-contenus/inline.php?id={{app.contenus.id_page}}">Modifier les contenus</a>
 				</section>
 			{% endif %}
 		</div>
