--- a/admin/views/gestion-contenus/modifier-contenu.html
+++ b/admin/views/gestion-contenus/modifier-contenu.html
@@ -12,7 +12,7 @@
 			<button type="submit" class="submit-contenu" type="submit"><i class="fa fa-check"></i>Valider</button>
 		{% endif %}
 
-		<input type="hidden" name="id_page" value="{{ id }}">
+		<input type="hidden" name="id_page" value="{{ app.contenus.id_page }}">
 		
 		{% if id != 1 and app.droit_acces_page.supprimer == 1 or app.super_admin == 1 %}
 			<button id="supprimer-page-contenu" type="button" class="submit-contenu supprimer-page supprimer open-popup" popup="supprimer-page" href="{{ADMWEBROOT}}controller/core/admin/contenus/gestion/supprimer_page?id={{app.contenus.id_page}}"><i class="fa fa-times"></i>Supprimer cette page</button>
