--- a/admin/views/gestion-contenus/modifier-contenu.html
+++ b/admin/views/gestion-contenus/modifier-contenu.html
@@ -13,6 +13,7 @@
 		{% endif %}
 
 		<input type="hidden" name="id_page" value="{{ app.contenus.id_page }}">
+		<input type="hidden" name="url_avant" value="{{ app.contenus.url }}">
 		
 		{% if id != 1 and app.droit_acces_page.supprimer == 1 or app.super_admin == 1 %}
 			<button id="supprimer-page-contenu" type="button" class="submit-contenu supprimer-page supprimer open-popup" popup="supprimer-page" href="{{ADMWEBROOT}}controller/core/admin/contenus/gestion/supprimer_page?id={{app.contenus.id_page}}"><i class="fa fa-times"></i>Supprimer cette page</button>
