--- a/admin/views/gestion-contenus/modifier-contenu.html
+++ b/admin/views/gestion-contenus/modifier-contenu.html
@@ -71,7 +71,7 @@
 						sur du texte, et si il est modifiable, vous pourrez l'éditer.
 					</p>
 	
-					<a class="submit-contenu submit-standard inline no-shadow ml0" href="{{ADMWEBROOT}}gestion-contenus/inline.php?id={{app.contenus.id_page}}">Modifier les contenus</a>
+					<a class="submit-contenu submit-standard inline no-shadow ml0" href="{{ADMWEBROOT}}gestion-contenus/inline?id={{app.contenus.id_page}}&url={{ app.contenus.url }}">Modifier les contenus</a>
 				</section>
 			{% endif %}
 			
