--- a/admin/views/template/css/module.scss
+++ b/admin/views/template/css/module.scss
@@ -139,9 +139,20 @@
 		padding: 20px;
 		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 		
+		h2 {
+			margin-bottom: 10px;
+		}
+		
 		a {
 			float: right;
 			min-width: inherit;
+		}
+		
+		.checkbox-perso {
+			float: right;
+			min-width: inherit;
+			clear: both;
+			margin-right: 10px;
 		}
 	}
 }
