edit header of access right

--- a/admin/views/gestion-droits-acces/index.html
+++ b/admin/views/gestion-droits-acces/index.html
@@ -1,6 +1,6 @@
 <header>
 	<div class="inner">
-		<h1>Gestion des droits d'accès | toutes les listes<</h1>
+		<h1>Gestion des droits d'accès | toutes les listes</h1>
 	</div>
 </header>
 {% if app.super_admin == 1 or "GESTION DROIT ACCES" in app.droit_acces_user  %}
