--- a/admin/views/gestion-droits-acces/modifier-liste.html
+++ b/admin/views/gestion-droits-acces/modifier-liste.html
@@ -1,6 +1,6 @@
 <header>
 	<div class="inner">
-		<h1>Gestion des droits d'accès | toutes les listes<</h1>
+		<h1>Gestion des droits d'accès | modification de la liste {{ app.nom_liste }}</h1>
 	</div>
 </header>
 {% if app.super_admin == 1 or "GESTION DROIT ACCES" in app.droit_acces_user  %}
@@ -10,7 +10,6 @@
 	
 	<div class="inner">
 		<div class="contenu modifier-contenu gestion-comptes configuration">
-			<h2>Options</h2>
 			<table>
 				<thead>
 					<tr>
